[package]
name = "gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
#egui_memory_editor = "0.2.2"
egui_memory_editor = {git = "https://github.com/Hirtol/egui_memory_editor.git"}
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"

[profile.release]
debug = true
